# olostep-404s

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
olostep_link_checker/: __init__.py  budget.py  canary.py  classifier.py  cli.py  config.py  differ.py  discovery.py  escalation.py  external_checker.py  external_resolver.py  flat_report.py  http_fetcher.py  links.py  olostep_client.py  patterns.py  report.py  retry.py  store.py  urlnorm.py  verdict_cache.py
tests/: test_budget.py  test_canary.py  test_classifier.py  test_cli_external_resolution.py  test_cli_integration.py  test_config.py  test_differ.py  test_discovery.py  test_escalation.py  test_external_checker.py  test_external_resolver.py  test_flat_report.py  test_http_fetcher.py  test_links.py  test_main.py  test_olostep_client.py  test_patterns.py  test_report.py  test_retry.py  test_store.py  test_urlnorm.py  test_verdict_cache.py
tests/fixtures/: decoy_404_in_body.html  hard_404.html  healthy_page.html  soft_404_nextjs.html
