[project]
name = "olostep-link-checker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "beautifulsoup4==4.15.0",
    "lxml==6.1.1",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "respx==0.23.1",
    "pytest-asyncio==1.4.0",
]

[project.scripts]
olostep-link-checker = "olostep_link_checker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["olostep_link_checker"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
